# wgpu-projects

./: Cargo.toml  README.md
00-hello/: Cargo.toml
00-hello/src/: main.rs
01-hello-triangle/: Cargo.toml
01-hello-triangle/src/: main.rs
02-uniform-values/: Cargo.toml
02-uniform-values/src/: app_state.rs  basic_wgpu_context.rs  main.rs  shader.wgsl
03-cube/: Cargo.toml
03-cube/src/: main.rs  shader.wgsl  vertex.rs
04-circles/: Cargo.toml
04-circles/src/: main.rs  shader.wgsl
framework/: Cargo.toml
framework/src/: lib.rs  shader.rs  wgpu_context.rs
framework/src/builder/: buffer.rs  mod.rs  pipelinelayout.rs  renderpass.rs
hello-triangle/src/: main.rs  shader.wgsl
