[package]
name = "hello-triangle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger.workspace = true
framework = { version = "0.1.0", path = "../framework" }
pollster.workspace = true
wgpu.workspace = true
winit.workspace = true
