[package]
name = "uniform-values"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.15.0"
encase = { version = "0.7.0", features = ["glam"] }
env_logger = "0.11.3"
glam = "0.25.0"
help = "0.0.0"
# glam = { version = "0.27.0", features = ["bytemuck"] }
logger = "0.4.0"
pollster = "0.3.0"
wgpu = "0.19.4"
winit = "0.29.15"
