[package]
name = "uniform-values"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck.workspace = true
encase.workspace = true
env_logger.workspace = true
glam.workspace = true
help.workspace = true
# glam.workspace = true
logger.workspace = true
pollster.workspace = true
wgpu.workspace = true
winit.workspace = true
